Simplify BufferPoolsHolder in VM class